# last-commit-files

./: README.md  pyproject.toml
src/last_commit_files/: __main__.py
