[project]
name = "last-commit-files"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "poly000", email = "1348292515a@gmail.com" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
last-commit-files = "last_commit_files.__main__:main"

[tool.pdm]
distribution = true
